--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,25 +1,44 @@
-
-name: Java CI with Maven
-
+# This is a basic workflow to help you get started with Actions
+name: Deploy
+# version 7
+# Controls when the action will run. Triggers the workflow on push or pull request
 on:
   push:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+-dev"
       - "v[0-9]+.[0-9]+.[0-9]+-prod"
 
+env:
+  BEFORE_SHA: ${{ github.event.before }}
+  # REGION: YOUR_SERVICE_REGION
 jobs:
-  build:
-
+  setup:
+    name: "Deploy"
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn clean package -DskipTests
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Extract branch name
+        shell: bash
+        run: echo "branch=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_OUTPUT
+        id: extract_branch
+
+      - name: Fetch branch history
+        run: git fetch origin ${{ steps.extract_branch.outputs.branch }}
+
+      - name: Is Prerelease
+        uses: winterjung/split@v2
+        id: split_pre
+        with:
+          msg: ${{ steps.extract_branch.outputs.branch }}
+          separator: "-"
